--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^18.0.0",
     "@capacitor/android": "6.1.2",
     "@capacitor/app": "6.0.1",
+    "@capacitor/browser": "^6.0.2",
     "@capacitor/core": "^6.1.2",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
